# Gamepad

./: .gitignore  80-local.rules  CMakeLists.txt  README.md
docs/: CMakeLists.txt  Doxyfile.in
docs/markdown_sources/: mainpage.md  setup.md  use.md
docs/markdown_sources/gamepads/: ps5.md
header/: KM-R_ps5.hpp
include/: KM-R_ps5.hpp  KMR_ps5.hpp
scripts/ps5/: addMAC.sh  createRules.sh
source/: KM-R_ps5.cpp  KMR_ps5.cpp
